added more commands to package json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "frontend":"cd frontend && npm start --watch",
-    "backend":"cd backend && npm run dev"
+    "frontend": "cd frontend && npm start --watch",
+    "backend": "cd backend && npm run dev",
+    "frontend-h": "cd frontend && npm start",
+    "backend-h": "cd backend && npm run start"
   },
   "repository": {
     "type": "git",
