--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "Hello!\r This is my learning project taken from the free course on https://fullstackopen.com/en",
   "main": "./frontend/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "frontend-dev": "cd frontend && npm start --watch",
-    "backend-dev": "cd backend && npm run dev",
-    "frontend": "cd frontend && npm start",
-    "backend": "cd backend && npm run start",
-    "build":"cd frontend && rm -rf package-lock.json && rm -rf node_modules && npm cache clean --force && npm install && npm run build && rm -rf ../backend/build && mv build ../backend && cd ..",
-    "start": "npm run frontend & npm run backend",
-    "dev":"npm run frontend-dev & npm run backend-dev"
+    "dev": "npm run dev-backend & npm run dev-frontend",
+    "dev-frontend": "cd frontend && npm start --watch",
+    "dev-backend": "cd backend && npm run dev",
+    "start": "cd backend && npm run start",
+    "build": "cd frontend && rm -rf package-lock.json && rm -rf node_modules && npm cache clean --force && npm install && npm run build && rm -rf ../backend/build && mv build ../backend && cd .."
   },
   "repository": {
     "type": "git",
@@ -25,6 +22,8 @@
   "homepage": "https://github.com/SamuelMartinsXGeeks/fullstack-helsinki#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.3",
+    "dotenv": "^16.0.1"
   }
 }
