--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "Samuel Martins",
   "license": "MIT",
@@ -16,6 +17,7 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "eslint": "^8.15.0",
     "nodemon": "^2.0.16"
   }
 }
