--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "react-scripts start --watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -39,6 +40,7 @@
   },
   "author": "Samuel Martins",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "json-server": "^0.17.0"
   }
 }
