--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/SamuelMartinsXGeeks/fullstack-helsinki#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "cross-env": "^7.0.3",
+    "express-async-errors": "^3.1.1"
   }
 }
