--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -20,7 +19,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "npx json-server --port 3001 --watch db.json"
+    "server": "npx json-server --port 3001 --watch db.json",
+    "eslint": "npx eslint .",
+    "clean": "npx eslint . --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +43,7 @@
   },
   "author": "Samuel Martins",
   "devDependencies": {
+    "@testing-library/user-event": "^14.2.0",
     "cross-env": "^7.0.3",
     "eslint-plugin-jest": "^26.2.2",
     "json-server": "^0.17.0"
