--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "dev-frontend": "cd frontend && npm start --watch",
     "dev-backend": "cd backend && npm run dev",
     "start": "cd backend && npm run start",
-    "build": "cd frontend && rm -rf package-lock.json && rm -rf node_modules && npm cache clean --force && npm install && npm run build && rm -rf ../backend/build && mv build ../backend && cd ..",
-    "eslint":"npx eslint .",
-    "clean":"npx eslint . --fix"
+    "build": "cd frontend && rm -rf package-lock.json && rm -rf node_modules && npm cache clean --force && npm install && npm run build && rm -rf ../backend/build && mv build ../backend && cd .."
   },
   "repository": {
     "type": "git",
@@ -25,10 +23,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "mongoose": "^6.3.3",
-    "dotenv": "^16.0.1",
     "cross-env": "^7.0.3",
-    "express-async-errors": "^3.1.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^6.3.3"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0"
   }
 }
